--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Future development ideas/TODOs
 - Add load/performance testing functionality. Make it possible to parallelize execution of dhcptool
 - Include a libnet version in distribution, as its hosting does not seem to be so stable (possibly also include libpcap)
 - Add a listen-only mode?
+- More verbosity levels, more consistent output at different levels
