--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@ Future development ideas/TODOs
 - Include a libnet version in distribution, as its hosting does not seem to be so stable (possibly also include libpcap)
 - Add a listen-only mode?
 - More verbosity levels, more consistent output at different levels
+- more ideas...
